Minor optimisation - removed Integer instantiation.